    $WINDOWSIMPLIBPREFIX construction variables.  The old names are now
    deprecated, but preserved for backwards compatibility.

  From Chen Lee:

  - Add x64 support for Microsoft Visual Studio 8.

  From Baptiste Lepilleur:

  - Support the --debug=memory option on Windows when the Python version
    has the win32process and win32api modules.

  - Add support for Visual Studio 2005 Pro.

  - Fix Windows portability issues in various Visual Studio and
    Java tests.

  From Christian Maaser:

  - Add support for Visual Studio Express Editions.

  - Add support for Visual Studio 8 *.manifest files, includng
    new $WINDOWS_INSERT_MANIFEST, $WINDOWSPROGMANIFESTSUFFIX,
    $WINDOWSPROGMANIFESTPREFIX, $WINDOWSPROGMANIFESTSUFFIX,
    $WINDOWSSHLIBMANIFESTPREFIX and $WINDOWSSHLIBMANIFESTSUFFIX
    construction variables.

  From Adam MacBeth:

  - Fix detection of additional Java inner classes following use of a
    "new" keyword inside an inner class.

  From Sanjoy Mahajan:

  - Correct TeX-related command lines to just $SOURCE, not $SOURCES

  From Patrick Mezard:

  - Execute build commands for a command-line target if any of the
    files built along with the target is out of date or non-existent,
    not just if the command-line target itself is out of date.

  - Fix the -n option when used with -c to print all of the targets
    that will be removed for a multi-target Builder call.

  - If there's no file in the source directory, make sure there isn't
    one in the build directory, too, to avoid dangling files left
    over from previous runs when a source file is removed.

  - Allow AppendUnique() and PrependUnique() to append strings (and
    other atomic objects) to lists.

  From Joel B. Mohler:

  - Extend latex.py, pdflatex.py, pdftex.py and tex.py so that building
    from both TeX and LaTeX files uses the same logic to call $BIBTEX
    when it's necessary, to call $MAKEINDEX when it's necessary, and to